# tree-sitter-fish

./: .gitignore  .gitmodules  Cargo.toml  README.md  binding.gyp  grammar.js  grammar.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: test.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: background.txt  begin.txt  begin_statement.txt  bracket_expansion.txt  command.txt  command_substitution.txt  comment.txt  concatenation.txt  conditional_execution.txt  double_quote_string.txt  for_statement.txt  list_element_access.txt  negated_statement.txt  pipe.txt  redirected_statement.txt  redirection.txt  single_quote_string.txt  switch_statement.txt  variable_expansion.txt  while_statement.txt
queries/: highlights.scm
scripts/: shared_output.txt  test_shared.fish  test_shared.sh
scripts/shared_out/: _examples_fish_share_completions_canto_fish  _examples_fish_share_functions_fish_print_hostnames_fish  _examples_fish_share_functions_fish_systemctl_services_fish
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: background.txt  begin_statement.txt  brace_expansion.txt  bracket_expansion.txt  builtins.txt  command.txt  command_substitution.txt  comment.txt  concatenation.txt  conditional_execution.txt  double_quote_string.txt  escape_sequence.txt  failing_cases.txt  falsely_correct_cases.txt  for_statement.txt  function_definition.txt  glob.txt  home_dir_expansion.txt  if_statement.txt  list_element_access.txt  negated_statement.txt  override_variable.txt  pipe.txt  redirected_statement.txt  (+7 more)
(+7 files in other folders)
