[package]
name = "tree-sitter-fish"
description = "fish grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "fish"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ram02z/tree-sitter-fish"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.17"

[build-dependencies]
cc = "1.0"
